fixed offcenter in indefixed offcenter in indexx

--- a/index.css
+++ b/index.css
@@ -31,12 +31,14 @@
 
     [class^="column"] {
         width: 95%;
+        margin: 0px;
     }
 }
 
 #titlepic {
     height: auto;
-    width: 80%;
+    width: 60%;
     display: block;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
